[package]
name = "ficxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.28.1", features = ["serde", "default_fonts"] }
egui-snarl = { version = "0.4.3", features = ["serde"] }
